# vid2sub

./: .gitignore  AGENTS.md  README.md  config_sample.yaml  main.py  prompt.yaml  pyproject.toml
vid2sub/: __init__.py  config.py  gemini_srt_polisher.py  gemini_srt_translator.py  humanizer.py  logger.py  openai_srt_processor.py  prompts.py  subtitle_generator.py  vocal_isolator.py
video2srt/: __init__.py  gemini_srt_polisher.py  gemini_srt_translator.py  openai_srt_processor.py  subtitle_generator.py
