[project]
name = "vid2sub"
version = "0.1.0"
description = "CLI for batch processing STT, polishing, and translation from YT or local videos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "moviepy>=2.2.1",
    "pyyaml>=6.0.3",
    "yt-dlp>=2026.3.17",
]

[project.optional-dependencies]
# Vocal isolation (separate speech from music/SFX) before STT.
# Heavy (PyTorch); install only when needed: `uv sync --extra separate`
separate = [
    "demucs>=4.0.1",
]
